# server/src/application/dto/admin/dashboard/user_response.rs
@@ -1,0 +1,7 @@
+use serde::Serialize;
+
+#[derive(Debug, Serialize)]
+pub struct UserResponse {
+  pub user_count: i64,
+  pub average_value_per_user: f32,
+}
